--- a/wp-content/themes/poetry-garden/style.css
+++ b/wp-content/themes/poetry-garden/style.css
@@ -23,7 +23,6 @@ body::-webkit-scrollbar-thumb {
 */
 * {
 	font-family:var(--font-family);
-	
 }
 
 .admin_message {
@@ -58,12 +57,6 @@ body .sideNav svg g path {
 	stroke: var(--site-text);
 }
 
-.absolute {position:absolute;}
-
-.align-center {align-items:center;}
-
-.cursor-pointer {cursor:pointer}
-
 .comment-content {    padding-right: 0;
     padding-left: 2%;
 	padding-top:3%;
@@ -78,8 +71,8 @@ body .sideNav svg g path {
 
 main .comment-meta .avatar {width: 11%;}
 
-main :is(p, h1, h2, h3, h4, h5, h6, a, div, span, label, li), .pageflap :is(p, h1, h2, h3, h4, h5, h6, a, div, span, label, li)  {
-	color: var(--page-text);
+main, .pageflap  {
+	--site-text: var(--page-text);
 }
 
 .comment-reply-title, .comments-title {font-size:1.35rem;}
@@ -89,27 +82,14 @@ div [dir="auto"] {
     min-height: 0.125em;
 }
 
-.divider {
-	text-align: center;
-font-weight: 550;
-margin: 2% 0;
-}
-
-.fixed {position:fixed;}
-.fixed.bottom {bottom:3%;}
-
-.flex {display:flex;}
-
-.flex.wrap {flex-wrap:wrap;}
-
-.flex.column {flex-direction:column;}
-
-.flex.column.justify-right {align-items:flex-end;}
-.flex.column.justify-left {align-items:flex-start;}
-
 svg .fnt0 {
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif !important;
 }
+
+
+
+
+
 
 #framework {width:100%;
 min-height:100vh;
@@ -129,15 +109,6 @@ min-height:100vh;
 
 }
 
-.full {width:100%;
-height:100%;}
-
-.full-height {height:100vh;}
-
-.full-width {width:100%;}
-
-.half-width {width:50%;}
-
 .sig {margin-bottom:0;}
 
 p.sig {font-size:1.25rem;
@@ -154,11 +125,6 @@ h3.sig {
 	margin: 0 auto;
 	padding: 1% 0;
 }
-
-.justify-center {justify-content:center;}
-.justify-right {justify-content:flex-end;}
-.justify-left {justify-content:flex-start;}
-.justify-space-between {justify-content:space-between;}
 
 label.sideNav svg {
 	width: 2rem;
@@ -194,10 +160,6 @@ margin: 0;}
 .menu.title {font-size:1.5em;
 }
 
-.mid-width {width:75%;}
-
-.ml-2 {margin-left:2%;}
-
 .modal-input, .pageflap {display:none;}
 .modal-input.left:checked ~ main {margin-left:32%;}
 .modal-input.right:checked ~ main {right:13%;}
@@ -213,7 +175,7 @@ margin: 0;}
 	z-index:-1;
 }
 
-.padding-mid {padding: 2%;}
+
 
 .pageflap {
 top: 0;
@@ -241,9 +203,11 @@ overflow-x:hidden;}
 .pageflap_img.large.center img {left:13.5%;}
 .pageflap_img.full-width img {width:100%;}
 .pageflap_img.full-width.center img {left:0;}
-.pageflap_img.banner img {width:120%;
-left:-10%;
-float:none!important;}
+.pageflap_img.banner img {
+	width:120%;
+	left:-10%;
+	float:none!important;
+}
 .pageflap_img.banner.top img {margin-top:-10%;
 margin-bottom: 2%;}
 .pageflap_img.banner.bottom img {margin-bottom:-10%;
@@ -261,16 +225,7 @@ box-sizing: content-box;
 	background:var(--site-background);
 }
 
-.relative {position:relative;}
-
 .sideNav.verso {flex-direction:row-reverse;}
-
-.sticky {position:sticky;
-width:100%;}
-.sticky.top, .fixed.top {top: 3%;}
-.sticky.bottom, .fixed.bottom {bottom: 3%;}
-.sticky .left, .fixed .left {padding-left:1.5%;}
-.sticky .right, .fixed .right {padding-right:1.5%;}
 
 .toc-list {
 	left:4%;
@@ -285,36 +240,15 @@ width:100%;}
 	
 	.modal-input.right:checked ~ main {right:0;}
 	
-	.p-column {flex-direction:column;}
-	
-	.p-justify-start {justify-content: flex-start;}
-	
-	.p-justify-center {justify-content: center;}
-	
 	.pageflap {
 		width:97.5%;
 	}
 	
 	.sig {text-align:center;}
 	
-	.sticky.top, .sticky.bottom {
-		    z-index: 9;
-    padding-top: 3%;
-    background: var(--site-background);
-    padding-bottom: 3%;
-		font-size:0.75em;
-	}
-	
 	label.sideNav svg {
 		width:1.5rem;
 		height:1.5rem;
 	}
 	
-	.sticky.top {
-		top:0;
-	}
-	
-	.sticky.bottom {
-		bottom:0;
-	}
 }
