--- a/wp-content/themes/poetry-garden/css/framework.css
+++ b/wp-content/themes/poetry-garden/css/framework.css
@@ -2,6 +2,16 @@
 
 .absolute {position:absolute;}
 
+.alignfull {
+    width: calc(100% + var(--padding-control) + var(--padding-control));
+    margin-left: calc(0em - var(--padding-control)) !important;
+}
+
+.alignwide {
+    width: calc(100% + var(--padding-control));
+    margin-left: calc(0em - var(--padding-control) / 2) !important;
+}
+
 .align-center {align-items:center;}
 
 .cursor-pointer {cursor:pointer}
@@ -60,7 +70,7 @@ margin: 2% 0;
 .sticky .left, .fixed .left {padding-left:1.5%;}
 .sticky .right, .fixed .right {padding-right:1.5%;}
 
-@media only screen and (max-width: 1100px) and (orientation:portrait) {
+@media only screen and (max-width: 1080px) {
 
 	.p-column {flex-direction:column;}
 	
@@ -75,5 +85,8 @@ margin: 2% 0;
         padding-bottom: 3%;
         font-size:0.75em;
     }
+
+    .sticky.top, .fixed.top {top: 0;}
+    .sticky.bottom, .fixed.bottom {bottom: 0;}
 
 }
